corrigindo erros de build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@nanostores/react": "^1.0.0",
